--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                 <div>
                         <img src="img/26.png" alt="" class="work-img">
                     <div id="button-section">
-                        <a href="https://react-todo-portfolio.herokuapp.com" target="_blank" class="link-work">Link</a>
+                        <a href="https://fitochat1.herokuapp.com" target="_blank" class="link-work">Link</a>
                     </div>
                 </div>
             </div>
