--- a/index.html
+++ b/index.html
@@ -11,21 +11,22 @@
 <body>
 
     <nav id="navbar">
-        <ul class="navbar-info">
+        <div class="navbar-info">
             <a href="#welcome-section">
-                <li>About</li>
+                About
             </a>
             <a href="#projects">
-                <li>Projects</li>
+                Projects
             </a>
             <a href="#work">
-                <li>Work</li>
+                Work
             </a>
-        </ul>
+        </div>
     </nav>
 
     <section id="welcome-section">
-        <h1>Hey I am Max</h1>
+        <div class="me-img"></div>
+        <h1>Max Lutsenko</h1>
         <h2>ABOUT ME</h2>
         <div class="about-me">
             <p>
@@ -48,10 +49,9 @@
                     <div class="info-pj">
                         <p>Card Slider</p>
                     </div>
-                    <div class="button-section">
-                        <a href="01-cards-sources/index.html" target="_blank" class="link-work">Link</a>
-                    </div>
-                    
+                    <a href="01-cards-sources/index.html" target="_blank" class="link-work">
+                        <p class="button-section">Link</p>
+                    </a>
                 </div>
 
                 <div>
@@ -59,9 +59,9 @@
                     <div class="info-pj">
                         <p>Card Slider</p>
                     </div>
-                    <div class="button-section">
-                        <a href="03-slider-sources/index.html" target="_blank" class="link-work">Link</a>
-                    </div>
+                    <a href="03-slider-sources/index.html" target="_blank" class="link-work">
+                        <p class="button-section">Link</p>
+                    </a>
                 </div>
             </div>
 
@@ -71,9 +71,9 @@
                     <div class="info-pj">
                         <p></p>
                     </div>
-                    <div class="button-section">
-                        <a href="gMadvice/index.html" target="_blank" class="link-work">Link</a>
-                    </div>
+                    <a href="gMadvice/index.html" target="_blank" class="link-work">
+                        <p class="button-section">Link</p>
+                    </a>
                 </div>
 
                 <div>
@@ -81,9 +81,9 @@
                     <div class="info-pj">
                         <p></p>
                     </div>
-                    <div class="button-section">
-                        <a href="https://react-todo-portfolio.herokuapp.com" target="_blank" class="link-work">Link</a>
-                    </div>
+                    <a href="https://react-todo-portfolio.herokuapp.com" target="_blank" class="link-work">
+                        <p class="button-section">Link</p>
+                    </a>
                 </div>
             </div>
 
@@ -93,9 +93,9 @@
                     <div class="info-pj">
                         <p></p>
                     </div>
-                    <div class="button-section">
-                        <a href="https://react-stopwatch-portfolio.herokuapp.com" target="_blank" class="link-work">Link</a>
-                    </div>
+                    <a href="https://react-stopwatch-portfolio.herokuapp.com" target="_blank" class="link-work">
+                        <p class="button-section">Link</p>
+                    </a>
                 </div>
 
                 <div>
@@ -103,9 +103,9 @@
                      <div class="info-pj">
                         <p></p>
                     </div>
-                    <div class="button-section">
-                        <a href="https://fitochat1.herokuapp.com" target="_blank" class="link-work">Link</a>
-                    </div>
+                    <a href="https://fitochat1.herokuapp.com" target="_blank" class="link-work">
+                        <p class="button-section">Link</p>
+                    </a>
                 </div>
             </div>
 
@@ -115,9 +115,9 @@
                     <div class="info-pj">
                         <p></p>
                     </div>
-                    <div class="button-section">
-                        <a href="6/index.html" target="_blank" class="link-work">Link</a>
-                    </div>
+                    <a href="6/index.html" target="_blank" class="link-work">
+                        <p class="button-section">Link</p>
+                    </a>
                 </div>
 
                 <div>
@@ -125,9 +125,9 @@
                     <div class="info-pj">
                         <p></p>
                     </div>
-                    <div class="button-section">
-                        <a href="Flappy_B/FlappyB.html" target="_blank" class="link-work">Link</a>
-                    </div>
+                    <a href="Flappy_B/FlappyB.html" target="_blank" class="link-work">
+                        <p class="button-section">Link</p>
+                    </a>
                 </div>
             </div>
 
@@ -137,9 +137,9 @@
                     <div class="info-pj">
                         <p></p>
                     </div>
-                    <div class="button-section">
-                        <a href="16/index.html" target="_blank" class="link-work">Link</a>
-                    </div>
+                    <a href="16/index.html" target="_blank" class="link-work">
+                        <p class="button-section">Link</p>
+                    </a>
                 </div>
 
                 <div>
@@ -147,9 +147,9 @@
                     <div class="info-pj">
                         <p></p>
                     </div>
-                    <div class="button-section">
-                        <a href="04-board-sources/index.html" target="_blank" class="link-work">Link</a>
-                    </div>
+                    <a href="04-board-sources/index.html" target="_blank" class="link-work">
+                        <p class="button-section">Link</p>
+                    </a>
                 </div>
             </div>
 
@@ -159,9 +159,9 @@
                     <div class="info-pj">
                         <p></p>
                     </div>
-                    <div class="button-section">
-                        <a href="02-drag-n-drop-sources/index.html" target="_blank" class="link-work">Link</a>
-                    </div>
+                    <a href="02-drag-n-drop-sources/index.html" target="_blank" class="link-work">
+                        <p class="button-section">Link</p>
+                    </a>
                 </div>
 
                 <div>
@@ -169,9 +169,9 @@
                     <div class="info-pj">
                         <p></p>
                     </div>
-                    <div class="button-section">
-                        <a href="05-aim-game-sources/index.html" target="_blank" class="link-work">Link</a>
-                    </div>
+                    <a href="05-aim-game-sources/index.html" target="_blank" class="link-work">
+                        <p class="button-section">Link</p>
+                    </a>
                  </div>
             </div>
 
@@ -181,18 +181,18 @@
                     <div class="info-pj">
                         <p></p>
                     </div>
-                    <div class="button-section">
-                        <a href="Porshe/index.html" target="_blank" class="link-work">Link</a>
-                    </div>
+                    <a href="Porshe/index.html" target="_blank" class="link-work">
+                        <p class="button-section">Link</p>
+                    </a>
                 </div>
                 <div>
                     <img src="img/2.png" alt="" class="work-img">
                     <div class="info-pj">
                         <p></p>
                     </div>
-                    <div class="button-section">
-                        <a href="15/index.html" target="_blank" class="link-work">Link</a>
-                    </div>
+                    <a href="15/index.html" target="_blank" class="link-work">
+                        <p class="button-section">Link</p>
+                    </a>
                 </div>
             </div>
 
@@ -202,9 +202,9 @@
                     <div class="info-pj">
                         <p></p>
                     </div>
-                    <div class="button-section">
-                        <a href="10/index.html" target="_blank" class="link-work">Link</a>
-                    </div>
+                    <a href="10/index.html" target="_blank" class="link-work">
+                        <p class="button-section">Link</p>
+                    </a>
                 </div>
 
                 <div>
@@ -212,9 +212,9 @@
                     <div class="info-pj">
                         <p></p>
                     </div>
-                    <div class="button-section">
-                        <a href="11/index.html" target="_blank" class="link-work">Link</a>
-                    </div>
+                    <a href="11/index.html" target="_blank" class="link-work">
+                        <p class="button-section">Link</p>
+                    </a>
                 </div>
             </div>
 
@@ -224,9 +224,9 @@
                     <div class="info-pj">
                         <p></p>
                     </div>
-                    <div class="button-section">
-                        <a href="4/index.html" target="_blank" class="link-work">Link</a>
-                    </div>
+                    <a href="4/index.html" target="_blank" class="link-work">
+                        <p class="button-section">Link</p>
+                    </a>
                 </div>
 
                 <div>
@@ -234,9 +234,9 @@
                     <div class="info-pj">
                         <p></p>
                     </div>
-                    <div class="button-section">
-                        <a href="5/index.html" target="_blank" class="link-work">Link</a>
-                    </div>
+                    <a href="5/index.html" target="_blank" class="link-work">
+                        <p class="button-section">Link</p>
+                    </a>
                 </div>
             </div>
 
@@ -246,9 +246,9 @@
                     <div class="info-pj">
                         <p></p>
                     </div>
-                    <div class="button-section">
-                        <a href="3B/index.html" target="_blank" class="link-work">Link</a>
-                    </div>
+                    <a href="3B/index.html" target="_blank" class="link-work">
+                        <p class="button-section">Link</p>
+                    </a>
                 </div>
 
                 <div>
@@ -256,9 +256,9 @@
                     <div class="info-pj">
                         <p></p>
                     </div>
-                    <div class="button-section">
-                        <a href="3W/index.html" target="_blank" class="link-work">Link</a>
-                    </div>
+                    <a href="3W/index.html" target="_blank" class="link-work">
+                        <p class="button-section">Link</p>
+                    </a>
                 </div>
             </div>
             
@@ -268,18 +268,18 @@
                     <div class="info-pj">
                         <p></p>
                     </div>
-                    <div class="button-section">
-                        <a href="14/index.html" target="_blank" class="link-work">Link</a>
-                    </div>
+                    <a href="14/index.html" target="_blank" class="link-work">
+                        <p class="button-section">Link</p>
+                    </a>
                 </div>
                 <div>
                     <img src="img/4.png" alt="" class="work-img">
                     <div class="info-pj">
                         <p></p>
                     </div>
-                    <div class="button-section">
-                        <a href="2/index.html" target="_blank" class="link-work">Link</a>
-                    </div>
+                    <a href="2/index.html" target="_blank" class="link-work">
+                        <p class="button-section">Link</p>
+                    </a>
                 </div>
             </div>
 
@@ -289,9 +289,9 @@
                     <div class="info-pj">
                         <p></p>
                     </div>
-                    <div class="button-section">
-                        <a href="1/index.html" target="_blank" class="link-work">Link</a>
-                    </div>
+                    <a href="1/index.html" target="_blank" class="link-work">
+                        <p class="button-section">Link</p>
+                    </a>
                 </div>
 
                 <div>
@@ -299,9 +299,9 @@
                     <div class="info-pj">
                         <p></p>
                     </div>
-                    <div class="button-section">
-                        <a href="8/index.html" target="_blank" class="link-work">Link</a>
-                    </div>
+                    <a href="8/index.html" target="_blank" class="link-work">
+                        <p class="button-section">Link</p>
+                    </a>
                 </div>
             </div>
 
@@ -311,9 +311,9 @@
                     <div class="info-pj">
                         <p></p>
                     </div>
-                    <div class="button-section">
-                        <a href="7/task2.html" target="_blank" class="link-work">Link</a>
-                    </div>
+                    <a href="7/task2.html" target="_blank" class="link-work">
+                        <p class="button-section">Link</p>
+                    </a>
                 </div>
 
                 <div>
@@ -321,9 +321,9 @@
                     <div class="info-pj">
                         <p></p>
                     </div>
-                    <div class="button-section">
-                        <a href="7/task1.html" target="_blank" class="link-work">Link</a>
-                    </div>
+                    <a href="7/task1.html" target="_blank" class="link-work">
+                        <p class="button-section">Link</p>
+                    </a>
                 </div>
             </div>
 
