--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 Projects
             </a>
             <a href="#work">
-                Work
+                Contact me
             </a>
         </div>
     </nav>
@@ -29,13 +29,13 @@
         <h1>Max Lutsenko</h1>
         <h2>ABOUT ME</h2>
         <div class="about-me">
-            <p>
-                Avid front-end developer with proficiency in a range of programming languages - JavaScript, 
-                HTML, CSS, and others- and frameworks - Bootstrap, Ionic, and Mocha, among others. 
+            <p>Avid front-end developer with proficiency in a range of programming languages 
+                - JavaScript, HTML, CSS, and others
+                - and frameworks - Bootstrap, Ionic, and Mocha, among others. 
                 Expert in libraries, such as React and Three.js.
+                
                 Skilled team player by virtue of being a professional track and field athlete for 10 years. 
-                Wields professional working proficiency in English, and native in Russian and Ukrainian.
-            </p>
+                Wields professional working proficiency in English, and native in Russian and Ukrainian.</p>
         </div>
     </section>
 
@@ -45,7 +45,7 @@
 
             <div class="img-section">
                 <div>
-                    <img src="img/14.png" alt="" class="work-img">
+                    <img src="img/14.png" class="work-img">
                     <div class="info-pj">
                         <p>Card Slider</p>
                     </div>
@@ -55,7 +55,7 @@
                 </div>
 
                 <div>
-                    <img src="img/13.png" alt="" class="work-img">
+                    <img src="img/13.png" class="work-img">
                     <div class="info-pj">
                         <p>Card Slider</p>
                     </div>
@@ -67,9 +67,9 @@
 
             <div class="img-section">
                 <div>
-                    <img src="img/23.png" alt="" class="work-img">
+                    <img src="img/23.png" class="work-img">
                     <div class="info-pj">
-                        <p></p>
+                        <p>Random (5-20) advice from api</p>
                     </div>
                     <a href="gMadvice/index.html" target="_blank" class="link-work">
                         <p class="button-section">Link</p>
@@ -77,9 +77,9 @@
                 </div>
 
                 <div>
-                    <img src="img/24.png" alt="" class="work-img">
+                    <img src="img/24.png" class="work-img">
                     <div class="info-pj">
-                        <p></p>
+                        <p>ToDo on React with api <a href="https://github.com/Lutsyk/ToDo_React" target="_blank">github</a></p>
                     </div>
                     <a href="https://react-todo-portfolio.herokuapp.com" target="_blank" class="link-work">
                         <p class="button-section">Link</p>
@@ -89,9 +89,9 @@
 
             <div class="img-section">
                 <div>
-                    <img src="img/25.png" alt="" class="work-img">
+                    <img src="img/25.png" class="work-img">
                     <div class="info-pj">
-                        <p></p>
+                        <p>React Stopwatch <a href="https://github.com/Lutsyk/ReactStopWatch" target="_blank">github</a></p>
                     </div>
                     <a href="https://react-stopwatch-portfolio.herokuapp.com" target="_blank" class="link-work">
                         <p class="button-section">Link</p>
@@ -99,9 +99,9 @@
                 </div>
 
                 <div>
-                     <img src="img/26.png" alt="" class="work-img">
+                     <img src="img/26.png" class="work-img">
                      <div class="info-pj">
-                        <p></p>
+                        <p>Chat app with socket.io <a href="https://github.com/Lutsyk/Fito_Chat" target="_blank">github</a></p>
                     </div>
                     <a href="https://fitochat1.herokuapp.com" target="_blank" class="link-work">
                         <p class="button-section">Link</p>
@@ -111,9 +111,9 @@
 
             <div class="img-section">
                 <div>
-                    <img src="img/7.png" alt="" class="work-img">
+                    <img src="img/7.png" class="work-img">
                     <div class="info-pj">
-                        <p></p>
+                        <p>Game store with boodstrap</p>
                     </div>
                     <a href="6/index.html" target="_blank" class="link-work">
                         <p class="button-section">Link</p>
@@ -121,9 +121,9 @@
                 </div>
 
                 <div>
-                    <img src="img/8.png" alt="" class="work-img">
+                    <img src="img/8.png" class="work-img">
                     <div class="info-pj">
-                        <p></p>
+                        <p>Game on vanilla JS with sprite animation</p>
                     </div>
                     <a href="Flappy_B/FlappyB.html" target="_blank" class="link-work">
                         <p class="button-section">Link</p>
@@ -133,9 +133,9 @@
 
             <div class="img-section">
                 <div>
-                    <img src="img/18.png" alt="" class="work-img">
+                    <img src="img/18.png" class="work-img">
                     <div class="info-pj">
-                        <p></p>
+                        <p>Calendar with css grid</p>
                     </div>
                     <a href="16/index.html" target="_blank" class="link-work">
                         <p class="button-section">Link</p>
@@ -143,9 +143,9 @@
                 </div>
 
                 <div>
-                    <img src="img/12.png" alt="" class="work-img">
+                    <img src="img/12.png" class="work-img">
                     <div class="info-pj">
-                        <p></p>
+                        <p>Board on vanilla JS</p>
                     </div>
                     <a href="04-board-sources/index.html" target="_blank" class="link-work">
                         <p class="button-section">Link</p>
@@ -155,9 +155,9 @@
 
             <div class="img-section">
                 <div>
-                    <img src="img/17.png" alt="" class="work-img">
+                    <img src="img/17.png" class="work-img">
                     <div class="info-pj">
-                        <p></p>
+                        <p>Drag and Drop with vanilla JS</p>
                     </div>
                     <a href="02-drag-n-drop-sources/index.html" target="_blank" class="link-work">
                         <p class="button-section">Link</p>
@@ -165,9 +165,9 @@
                 </div>
 
                 <div>
-                    <img src="img/19.png" alt="" class="work-img">
+                    <img src="img/19.png" class="work-img">
                     <div class="info-pj">
-                        <p></p>
+                        <p>Aim Game on vanilla JS</p>
                     </div>
                     <a href="05-aim-game-sources/index.html" target="_blank" class="link-work">
                         <p class="button-section">Link</p>
@@ -177,18 +177,18 @@
 
             <div class="img-section">
                 <div>
-                    <img src="img/1.png" alt="" class="work-img">
+                    <img src="img/1.png" class="work-img">
                     <div class="info-pj">
-                        <p></p>
+                        <p>Porshe page</p>
                     </div>
                     <a href="Porshe/index.html" target="_blank" class="link-work">
                         <p class="button-section">Link</p>
                     </a>
                 </div>
                 <div>
-                    <img src="img/2.png" alt="" class="work-img">
+                    <img src="img/2.png" class="work-img">
                     <div class="info-pj">
-                        <p></p>
+                        <p>Bootstrap landing page</p>
                     </div>
                     <a href="15/index.html" target="_blank" class="link-work">
                         <p class="button-section">Link</p>
@@ -198,9 +198,9 @@
 
             <div class="img-section">
                 <div>
-                    <img src="img/15.png" alt="" class="work-img">
+                    <img src="img/15.png" class="work-img">
                     <div class="info-pj">
-                        <p></p>
+                        <p>Work with local storage</p>
                     </div>
                     <a href="10/index.html" target="_blank" class="link-work">
                         <p class="button-section">Link</p>
@@ -208,9 +208,9 @@
                 </div>
 
                 <div>
-                    <img src="img/16.png" alt="" class="work-img">
+                    <img src="img/16.png" class="work-img">
                     <div class="info-pj">
-                        <p></p>
+                        <p>Work with table and sort </p>
                     </div>
                     <a href="11/index.html" target="_blank" class="link-work">
                         <p class="button-section">Link</p>
@@ -220,9 +220,9 @@
 
             <div class="img-section">
                 <div>
-                    <img src="img/5.png" alt="" class="work-img">
+                    <img src="img/5.png" class="work-img">
                     <div class="info-pj">
-                        <p></p>
+                        <p>Landing page</p>
                     </div>
                     <a href="4/index.html" target="_blank" class="link-work">
                         <p class="button-section">Link</p>
@@ -230,9 +230,9 @@
                 </div>
 
                 <div>
-                    <img src="img/6.png" alt="" class="work-img">
+                    <img src="img/6.png" class="work-img">
                     <div class="info-pj">
-                        <p></p>
+                        <p>Responsive Healse care landing page</p>
                     </div>
                     <a href="5/index.html" target="_blank" class="link-work">
                         <p class="button-section">Link</p>
@@ -242,9 +242,9 @@
 
             <div class="img-section">
                 <div>
-                    <img src="img/11.png" alt="" class="work-img">
+                    <img src="img/11.png" class="work-img">
                     <div class="info-pj">
-                        <p></p>
+                        <p>Landinge page with dark theme</p>
                     </div>
                     <a href="3B/index.html" target="_blank" class="link-work">
                         <p class="button-section">Link</p>
@@ -252,9 +252,9 @@
                 </div>
 
                 <div>
-                    <img src="img/10.png" alt="" class="work-img">
+                    <img src="img/10.png" class="work-img">
                     <div class="info-pj">
-                        <p></p>
+                        <p>Landinge page with white theme</p>
                     </div>
                     <a href="3W/index.html" target="_blank" class="link-work">
                         <p class="button-section">Link</p>
@@ -264,18 +264,18 @@
             
             <div class="img-section">
                 <div>
-                    <img src="img/3.png" alt="" class="work-img">
+                    <img src="img/3.png" class="work-img">
                     <div class="info-pj">
-                        <p></p>
+                        <p>Flex landing page</p>
                     </div>
                     <a href="14/index.html" target="_blank" class="link-work">
                         <p class="button-section">Link</p>
                     </a>
                 </div>
                 <div>
-                    <img src="img/4.png" alt="" class="work-img">
+                    <img src="img/4.png" class="work-img">
                     <div class="info-pj">
-                        <p></p>
+                        <p>Epam landing page</p>
                     </div>
                     <a href="2/index.html" target="_blank" class="link-work">
                         <p class="button-section">Link</p>
@@ -285,9 +285,9 @@
 
             <div class="img-section">
                 <div>
-                    <img src="img/9.png" alt="" class="work-img">
+                    <img src="img/9.png" class="work-img">
                     <div class="info-pj">
-                        <p></p>
+                        <p>HTML semantic lending page</p>
                     </div>
                     <a href="1/index.html" target="_blank" class="link-work">
                         <p class="button-section">Link</p>
@@ -295,9 +295,9 @@
                 </div>
 
                 <div>
-                    <img src="img/22.png" alt="" class="work-img">
+                    <img src="img/22.png" class="work-img">
                     <div class="info-pj">
-                        <p></p>
+                        <p>Input validation and currency convertor</p>
                     </div>
                     <a href="8/index.html" target="_blank" class="link-work">
                         <p class="button-section">Link</p>
@@ -307,9 +307,10 @@
 
             <div class="img-section">
                 <div>
-                    <img src="img/21.png" alt="" class="work-img">
+                    <img src="img/21.png" class="work-img">
                     <div class="info-pj">
-                        <p></p>
+                        <p>Casino game with random number 
+                            between 0-8 (if you win 0-8 x 2)</p>
                     </div>
                     <a href="7/task2.html" target="_blank" class="link-work">
                         <p class="button-section">Link</p>
@@ -317,9 +318,9 @@
                 </div>
 
                 <div>
-                    <img src="img/20.png" alt="" class="work-img">
+                    <img src="img/20.png" class="work-img">
                     <div class="info-pj">
-                        <p></p>
+                        <p>Investment calculator</p>
                     </div>
                     <a href="7/task1.html" target="_blank" class="link-work">
                         <p class="button-section">Link</p>
