--- a/index.html
+++ b/index.html
@@ -45,6 +45,28 @@
 
             <div class="img-section">
                 <div>
+                    <img src="img/Crypto.png" class="work-img">
+                    <div class="info-pj">
+                        <p>Crypto Currency React</p>
+                    </div>
+                    <a href="https://crypto-bite.herokuapp.com" target="_blank" class="link-work">
+                        <p class="button-section">Link</p>
+                    </a>
+                </div>
+
+                <div>
+                    <img src="img/Challenge.png" class="work-img">
+                    <div class="info-pj">
+                        <p>BootStrap landing page</p>
+                    </div>
+                    <a href="Challenge/index.html" target="_blank" class="link-work">
+                        <p class="button-section">Link</p>
+                    </a>
+                </div>
+            </div>
+
+            <div class="img-section">
+                <div>
                     <img src="img/14.png" class="work-img">
                     <div class="info-pj">
                         <p>Card Slider</p>
