add game Rock Paper Scissors

--- a/index.html
+++ b/index.html
@@ -349,7 +349,17 @@
                     </a>
                 </div>
             </div>
-
+            <div class="img-section">
+                <div>
+                    <img src="img/game.png" class="work-img">
+                    <div class="info-pj">
+                        <p>Rock Paper Scissors Game</p>
+                    </div>
+                    <a href="Game!!/index.html" target="_blank" class="link-work">
+                        <p class="button-section">Link</p>
+                    </a>
+                </div>
+            </div>
         </div>
 
 
