--- a/index.html
+++ b/index.html
@@ -380,9 +380,7 @@
           <div>
             <img src="img/21.png" class="work-img" />
             <div class="info-pj">
-              <p>
-                Casino game with random number between 0-8 (if you win 0-8 x 2)
-              </p>
+              <p>Casino game with random number</p>
             </div>
             <a href="7/task2.html" target="_blank" class="link-work">
               <p class="button-section">Link</p>
@@ -429,7 +427,7 @@
                 <p class="button-section">Link</p>
               </a>
             </div>
-          </div>
+        </div>
       </div>
 
       <div class="more">
